--- a/HelloMorning/app/src/main/res/layout/activity_main.xml
+++ b/HelloMorning/app/src/main/res/layout/activity_main.xml
@@ -174,6 +174,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Go to Form" />
+
+            <Button
+                android:id="@+id/APItest"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="API test" />
             </LinearLayout>
 
         </LinearLayout>
