--- a/HelloMorning/app/src/main/res/layout/activity_form.xml
+++ b/HelloMorning/app/src/main/res/layout/activity_form.xml
@@ -110,6 +110,7 @@
                 tools:layout_editor_absoluteY="52dp" />
 
             <EditText
+                android:id="@+id/name_input"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="text"
@@ -124,6 +125,7 @@
                 tools:layout_editor_absoluteX="0dp"
                 tools:layout_editor_absoluteY="155dp"/>
             <EditText
+                android:id="@+id/work_city_input"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="text"
