--- a/HelloMorning/app/src/main/res/layout/activity_main.xml
+++ b/HelloMorning/app/src/main/res/layout/activity_main.xml
@@ -16,46 +16,52 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
+
             <TextView
-                android:text="Hello Minjoo!"
-                android:layout_height="wrap_content"
+                android:id="@+id/helloUser"
                 android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
-                android:textAlignment="center"
-                android:textColor="#EED056"
                 android:shadowColor="#C39F0E"
                 android:shadowDx="0.0"
                 android:shadowDy="0.0"
                 android:shadowRadius="2.0"
-                android:textSize="25sp"
-                android:id="@+id/helloUser" />
+                android:text="Hello Minjoo!"
+                android:textAlignment="center"
+                android:textColor="#EED056"
+                android:textSize="25sp" />
 
             <RadioGroup
+                android:id="@+id/checklist"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:id="@+id/checklist">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Did you take?"
-                    android:background="#F9D35D"
-                    android:id="@+id/didYouTake"
-                    />
+                android:orientation="vertical">
 
-                <CheckBox android:id="@+id/check_Mask"
+                <TextView
+                    android:id="@+id/didYouTake"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Mask"/>
-                <CheckBox android:id="@+id/check_Umbrella"
+                    android:background="#F9D35D"
+                    android:text="Did you take?" />
+
+                <CheckBox
+                    android:id="@+id/check_Mask"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Umbrella"/>
-                <CheckBox android:id="@+id/check_Custom"
+                    android:text="Mask" />
+
+                <CheckBox
+                    android:id="@+id/check_Umbrella"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Umbrella" />
+
+                <CheckBox
+                    android:id="@+id/check_Custom"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="New-to-do"
-                    android:textColor="#A49F89"/>
+                    android:textColor="#A49F89" />
 
             </RadioGroup>
 
@@ -80,100 +86,122 @@
             </LinearLayout>
 
             <LinearLayout
-                android:layout_height="match_parent"
                 android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:orientation="vertical">
 
 
-
                 <TextView
+                    android:id="@+id/weeklyGoal"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Your weekly goal:"
                     android:background="#F9D35D"
-                    android:id="@+id/weeklyGoal"
+                    android:text="Your weekly goal:"
 
                     />
+
                 <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:stretchColumns="1">
+
                     <TableRow>
+
                         <TextView
-                            android:text="Mon"
                             android:layout_width="0dip"
-                            android:layout_weight="1"/>
+                            android:layout_weight="1"
+                            android:text="Mon" />
+
                         <TextView
-                            android:text="Tue"
                             android:layout_width="0dip"
-                            android:layout_weight="1"/>
+                            android:layout_weight="1"
+                            android:text="Tue" />
+
                         <TextView
-                            android:text="Wed"
                             android:layout_width="0dip"
-                            android:layout_weight="1"/>
+                            android:layout_weight="1"
+                            android:text="Wed" />
+
                         <TextView
-                            android:text="Thu"
                             android:layout_width="0dip"
-                            android:layout_weight="1"/>
+                            android:layout_weight="1"
+                            android:text="Thu" />
+
                         <TextView
-                            android:text="Fri"
                             android:layout_width="0dip"
-                            android:layout_weight="1"/>
+                            android:layout_weight="1"
+                            android:text="Fri" />
+
                         <TextView
-                            android:text="Sat"
                             android:layout_width="0dip"
-                            android:layout_weight="1"/>
+                            android:layout_weight="1"
+                            android:text="Sat" />
+
                         <TextView
-                            android:text="Sun"
                             android:layout_width="0dip"
-                            android:layout_weight="1"/>
+                            android:layout_weight="1"
+                            android:text="Sun" />
                     </TableRow>
 
                     <TableRow>
-                        <CheckBox android:id="@+id/checkbox_Mon"
+
+                        <CheckBox
+                            android:id="@+id/checkbox_Mon"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:onClick="onCheckboxClicked"/>
-                        <CheckBox android:id="@+id/checkbox_Tue"
+                            android:onClick="onCheckboxClicked" />
+
+                        <CheckBox
+                            android:id="@+id/checkbox_Tue"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:onClick="onCheckboxClicked"/>
-                        <CheckBox android:id="@+id/checkbox_Wed"
+                            android:onClick="onCheckboxClicked" />
+
+                        <CheckBox
+                            android:id="@+id/checkbox_Wed"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:onClick="onCheckboxClicked"/>
-                        <CheckBox android:id="@+id/checkbox_Thu"
+                            android:onClick="onCheckboxClicked" />
+
+                        <CheckBox
+                            android:id="@+id/checkbox_Thu"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:onClick="onCheckboxClicked"/>
-                        <CheckBox android:id="@+id/checkbox_Fri"
+                            android:onClick="onCheckboxClicked" />
+
+                        <CheckBox
+                            android:id="@+id/checkbox_Fri"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:onClick="onCheckboxClicked"/>
-                        <CheckBox android:id="@+id/checkbox_Sat"
+                            android:onClick="onCheckboxClicked" />
+
+                        <CheckBox
+                            android:id="@+id/checkbox_Sat"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:onClick="onCheckboxClicked"/>
-                        <CheckBox android:id="@+id/checkbox_Sun"
+                            android:onClick="onCheckboxClicked" />
+
+                        <CheckBox
+                            android:id="@+id/checkbox_Sun"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:onClick="onCheckboxClicked"/>
+                            android:onClick="onCheckboxClicked" />
                     </TableRow>
                 </TableLayout>
 
 
-            <Button
-                android:id="@+id/jumpToForm"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Go to Form" />
+                <Button
+                    android:id="@+id/jumpToForm"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Go to Form" />
             </LinearLayout>
 
         </LinearLayout>
