--- a/HelloMorning/app/src/main/res/layout/activity_form.xml
+++ b/HelloMorning/app/src/main/res/layout/activity_form.xml
@@ -85,14 +85,14 @@
             app:layout_constraintRight_toRightOf="parent">
 
             <LinearLayout
-                android:id="@+id/checkboxSet"
+                android:id="@+id/equipment"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Please indicate whether you possess these things:"/>
+                    android:text="Please indicate whether you possess these equipments:"/>
 
                 <CheckBox
                     android:id="@+id/mask"
@@ -159,6 +159,32 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="thermo mask" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/transportation"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Please indicate whether you possess these means of transportation:"/>
+
+                <CheckBox
+                    android:id="@+id/car"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="car" />
+
+                <CheckBox
+                    android:id="@+id/bike"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="bike" />
+
+
 
             </LinearLayout>
 
