--- a/HelloMorning/app/src/main/res/layout/activity_main.xml
+++ b/HelloMorning/app/src/main/res/layout/activity_main.xml
@@ -32,6 +32,41 @@
                 android:textSize="25sp" />
 
             <LinearLayout
+                android:id="@+id/weather"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/weatherAnnoucement"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="#F9D35D"
+                    android:text="Here is the weather for today in " />
+
+                <TextView
+                    android:id="@+id/weatherDescription"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Description : " />
+                <TextView
+                    android:id="@+id/weatherTemperature"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Temperature : " />
+                <TextView
+                    android:id="@+id/weatherWind"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Wind : " />
+                <TextView
+                    android:id="@+id/weatherHumidity"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Humidity : " />
+            </LinearLayout>
+
+            <LinearLayout
                 android:id="@+id/checklist"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -58,12 +93,6 @@
                     android:layout_height="wrap_content"
                     android:background="#F9D35D"
                     android:text="Best transport option" />
-
-                <TextView
-                    android:id="@+id/suggestTransport"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Subway" />
 
             </LinearLayout>
 
